[gd_scene load_steps=2 format=3 uid="uid://djml8s2st73tt"]

[ext_resource type="Script" uid="uid://dauxma2dsh46i" path="res://UI Menus/Scripts/pause_menu.gd" id="1_4wlev"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wlev")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.266
anchor_top = 0.5
anchor_right = 0.76
anchor_bottom = 0.6
offset_left = 0.567993
offset_top = -4.0
offset_right = 0.479919
offset_bottom = 0.199982

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Pause" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.252
anchor_right = 0.587
anchor_bottom = 0.378
offset_left = -0.512024
offset_top = -1.29601
offset_right = -0.223999
offset_bottom = 0.0559845
theme_override_font_sizes/font_size = 60
text = "Pause"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
